<resources>
    <string name="app_name">Organizer</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="locationName">Location name</string>
    <string name="change">Map type</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="userName">Username</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Confirm password</string>
    <string name="signingUp">Signing up…</string>
    <string name="allField">All fields must be completed!</string>
    <string name="differentPasswords">The passwords do not match!</string>
    <string name="invalidPassword">The given password is invalid. Password should be at least 6 characters.</string>
    <string name="usedEmail">The email address is already in use by another account.</string>
    <string name="badEmail">The email address is badly formatted.</string>
    <string name="login">Login</string>
    <string name="newAccount">Create new account</string>
    <string name="checkingLogin">Checking login…</string>
    <string name="finishSetup">Finish setup</string>
    <string name="finishingSetup">Finishing setup…</string>
    <string name="loginFailed">Login failed!</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="send">Send</string>
    <string name="checkInternet">Check the internet connection!</string>
    <string name="emailSent">E-mail successfully sent!</string>
    <string name="noUser">This user is not registered yet. The user may have been deleted.</string>
    <string name="wrongPassword">The password is invalid or the user does not have a password.</string>
    <string name="googleSignInFailed">Signing in with google account has failed.</string>
    <string name="facebook_app_id">383699712041599</string>
    <string name="cancelled">Login cancelled</string>
    <string name="fbSignInFailed">Signing in with Facebook account has failed.</string>
    <string name="contact">Contact: </string>
    <string name="locationOff">Location is off</string>
    <string name="locationNotExists">This location does not exist</string>
    <string name="eventType">Type of event</string>
    <string name="selectDate">Select date</string>
    <string name="selectTime">Select time</string>
    <string name="description">Description</string>
    <string name="selectLocation">Select location</string>
    <string name="addEvent">Add event</string>
    <string name="selectALocation">Firstly select location!</string>
    <string name="loggedUsersCanCreate">Only logged-in users can create an event</string>
    <string name="startingTime">Select starting time</string>
    <string name="startingDate">Select starting date</string>
    <string name="emptyDescription">Description cannot be blank!</string>
    <string name="eventTypeError">Event type length must be between 1 and 30 characters!</string>
    <string name="logOut">Log out</string>
    <string name="pastStartingDate">The start date has passed</string>
    <string name="subscribe">Subscribe to event</string>
    <string name="unsubscribe">Unsubscribe from event</string>
    <string name="logInToSubscribe">Firstly log in to subscribe to event</string>
    <string name="changePicture">Change profile picture</string>
    <string name="subscribedUsers">Subscribed users:</string>
    <string name="allEvent">All events</string>
    <string name="noEvent">There is no event</string>
    <string name="permissionsNotGranted">Permissions are not granted…</string>
    <string name="myLocationNotFound">Not been able to retrieve the current location yet</string>
    <string name="loadingEvents">Loading events…</string>
    <string name="uploadEvent">Uploading event…</string>
    <string name="loadingLanguage">Loading language…</string>
    <string name="loadingEvent">Loading event…</string>
</resources>
