<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.szabo.organizer.MapsActivity"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/changeTypeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape"/>

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/locationName"
        android:layout_toStartOf="@+id/searchButton"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:inputType="textCapSentences|text"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.szabo.organizer.MapsActivity"
        android:layout_below="@+id/searchField"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape"/>

</RelativeLayout>