<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="com.example.szabo.organizer.SearchActivity"
        android:background="@color/colorBackground"
        android:layout_weight="9">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eventTypeField"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/eventType"
            android:inputType="textCapSentences"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationField"
            android:layout_below="@+id/eventTypeField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/locationName"
            android:inputType="textCapSentences"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectDateButton"
            android:layout_below="@+id/locationField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/selectDate"
            android:background="@drawable/shape"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/searchButton"
        android:layout_gravity="center"
        android:text="@string/search"
        android:background="@color/colorAccent"
        android:layout_weight="1"/>

</LinearLayout>
