<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:layout_weight="95">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.szabo.organizer.LoginActivity"
        android:background="@color/colorBackground">

        <EditText
            android:id="@+id/loginEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginEmailField"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginPasswordField"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="-10dp"
            android:text="@string/forgotPassword"
            android:background="@android:color/transparent" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/googleButton"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">
        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/googleButton"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/newAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/facebookButton"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape"
            android:text="@string/newAccount" />
    </RelativeLayout>
</ScrollView>